--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -2,5 +2,20 @@
 
 
 {% block body %}
-    <h1>Se Connecter</h1>
+    </br>
+    </br>
+    <h1>Please log in !</h1>
+    <form action="{{ path('epharma') }}" method="POST">
+        <div class="form-group">
+            <input placeholder="Adresse mail" required name="_username"
+            type="text" class="form-control">
+        </div>
+        <div class="form-group">
+            <input placeholder="Mot de passe" required name="_username"
+            type="password" class="form-control">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-success">Se connecter</button>
+        </div>
+    </form>
 {% endblock %}
