--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
                         <a class="nav-link dropdown-toggle" href="{{ path('logout') }}" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Log Out</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle"  href="{{ path('secutity_inscription') }}" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">ADD USER</a>
+                        <a class="nav-link dropdown-toggle"  href="{{ path('secutity_inscription') }}" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Sign Up</a>
                     </li>
                 </ul>
               </div>
